# pyphyds

./: .gitignore  README.md  pyproject.toml
src/examples/: discrete_gas.py  discrete_gas_2.py  game_of_life.py  gas.py  gas_1.py  gas_2.py  gas_3.py  gas_4.py  one_particle_gas.py  two_particles_gas.py
src/pyphydl/: interactions.py  laws.py  particles.py  simulation.py
src/pyphydl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyphyds/: interactions.py  laws.py  particles.py  simulation.py
src/pyphyds/cellular/: __init__.py
src/pyphyds/cellular/interactions/: game_of_life.py
src/pyphyds/cellular/tests/: test_cellular_sim.py  test_gol_interaction.py
src/pyphyds/discrete_physics/: simulation.py
src/pyphyds/discrete_physics/interactions/: base_interaction.py  collision_interaction.py
src/pyphyds/discrete_physics/laws/: boundary_box.py  randomness.py
src/pyphyds/discrete_physics/tests/: test_particles.py
src/pyphyds/interactions/: base.py  collision_law.py
src/pyphyds/laws/: base.py  box_boundary.py
src/pyphyds/physics/: __init__.py  particles.py  simulation.py  utils.py
src/pyphyds/physics/interactions/: base.py  base_interaction.py  collision_interaction.py  collision_law.py  force_interaction.py  local_interaction.py
src/pyphyds/physics/laws/: base.py  base_law.py  boundaries.py  boundary_box.py  box_boundary.py  randomness.py
src/pyphyds/physics/particles/: discrete_particles.py  particle_map.py  particles.py
src/tests/: test_interaction.py  test_law.py  test_particles.py  test_simulation.py
(+9 files in other folders)
