[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyphydl"
authors = [
    {name = "Alex Athorne", email = "alexander.athorne@gmail.com"},
]
description = "Library for physics simulation dataset generation"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["simulation"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch",
    'importlib-metadata; python_version<"3.8"',
    "pyyaml",
    "numpy"   
]
dynamic = ["version"]